--- a/_sass/classic/_custom.scss
+++ b/_sass/classic/_custom.scss
@@ -125,9 +125,9 @@
 	font-size: $small-1-font-size;
 }
 
-// ====
+// ===============================================================
 // General
-// ====
+// ===============================================================
 
 .highlighter-rouge {
 	background: #fc9;
