--- a/_sass/classic/_widgets.scss
+++ b/_sass/classic/_widgets.scss
@@ -5,19 +5,19 @@
 	h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure { margin-bottom: 0; }
 }
 
-// The divider between widgets, a thin horizontal line.
-.widget-divider {
+// The separator between widgets, a thin horizontal line.
+.widget-separator {
 	margin-top: $vspacing-unit / 2;
 	margin-left: 0;
 	margin-bottom: $vspacing-unit / 2;
 	margin-right: 0;
-	border-bottom: 1px solid $widget-divider-color;
-	@if $widget-divider-display { display: block; } @else { display: none; }
+	border-bottom: 1px solid $widget-separator-color;
+	@if $widget-separator-display { display: block; } @else { display: none; }
 }
 
-// Divider between primary, secondary and tertiary
-.secondary-widget-divider { @extend .widget-divider; }
-.tertiary-widget-divider { @extend .widget-divider; }
+// Separator between primary, secondary and tertiary
+.secondary-widget-separator { @extend .widget-separator; }
+.tertiary-widget-separator { @extend .widget-separator; }
 
 // Used to include an iframe that scales with the column width in HD (16:9) format.
 // To be used for the div that wraps an iframe like:
