--- a/_includes/tertiary-column.html
+++ b/_includes/tertiary-column.html
@@ -1,7 +1,7 @@
 
 <!-- include tertiary-column.html -->
-{%- comment -%}<!-- This widget divider will only show up when the tertiary column content is merged into the secondary column-->{%- endcomment %}
-<div class="tertiary-widget-divider"></div>
+{%- comment -%}<!-- This widget separator will only show up when the tertiary column content is merged into the secondary column-->{%- endcomment %}
+<div class="tertiary-widget-separator"></div>
 <div class="widget">
 {% include widgets/browser-info.html %}
 </div>
