--- a/_includes/widgets/browser-info.html
+++ b/_includes/widgets/browser-info.html
@@ -11,6 +11,6 @@
 		<li>Safari 9.0</li>
 		<li>Opera 17.0</li>
 	</ul>
-	<p>Problems? please <a href="/pages/contact/contact.html">contact</a> me.</p>
+	<p>Problems? please <a href="{{ "/pages/contact/contact.html" | relative_url }}">contact</a> me.</p>
 </div>
 <!-- end of include browser-info.html -->
