--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,13 +28,13 @@ Configuration:
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	{%- if site.data.setup.realfavicongenerator %}
-	<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
-	<link rel="manifest" href="/icons/manifest.json">
-	<link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="shortcut icon" href="/icons/favicon.ico">
-	<meta name="msapplication-config" content="/icons/browserconfig.xml">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ "/icons/apple-touch-icon.png" | relative_url }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ "/icons/favicon-32x32.png" | relative_url }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ "/icons/favicon-16x16.png" | relative_url }}">
+	<link rel="manifest" href="{{ "/icons/manifest.json" | relative_url }}">
+	<link rel="mask-icon" href="{{ "/icons/safari-pinned-tab.svg" | relative_url }}" color="#5bbad5">
+	<link rel="shortcut icon" href="{{ "/icons/favicon.ico" | relative_url }}">
+	<meta name="msapplication-config" content="{{ "/icons/browserconfig.xml" | relative_url }}">
 	<meta name="theme-color" content="#ffffff">
 	{%- endif %}
 
