--- a/_includes/widgets/older-posts.html
+++ b/_includes/widgets/older-posts.html
@@ -56,7 +56,7 @@ Translations can be configure in the _data/text-for.yml file for the items `tOld
 			<summary>{{ monthString }}</summary>
 			{%- assign monthDetails = true -%}
 		{%- endif %}
-			<a href="{{ post.url }}"><p>{{ post.title }}</p></a>
+			<a href="{{ post.url | relative_url }}"><p>{{ post.title }}</p></a>
 	{%- endfor -%}
 	{%- if monthDetails %}
 		</details>
