--- a/_includes/widgets/recent-posts.html
+++ b/_includes/widgets/recent-posts.html
@@ -17,7 +17,7 @@ Configure the text for the header message in "_data/text-for.yml" for the item `
 	{%- endif %}
 	<h1>{{ recent }}:</h1>
 	{%- for post in site.posts limit: site.data.setup.number-of-recent-posts-in-widget %}
-		<p><a href="{{ post.url }}">{% if post.date %}{{ post.date | date: "%F" }}{% endif %} {{ post.title }}</a></p>
+		<p><a href="{{ post.url | relative_url }}">{% if post.date %}{{ post.date | date: "%F" }}{% endif %} {{ post.title }}</a></p>
 	{%- endfor %}
 </div>
 {%- endif %}
