--- a/_sass/classic-jekyll-theme.scss
+++ b/_sass/classic-jekyll-theme.scss
@@ -43,9 +43,9 @@ $grey-color-light:				lighten($grey-color, 40%);
 $grey-color-light-light:		lighten($grey-color-light, 40%);
 $grey-color-dark:				darken($grey-color, 25%);
 
-// Since Liquid is not available, it is necessary to redefine the base-url here
+// Since Liquid is not available, it is necessary to redefine the baseurl from the _config.yml file here
 //
-$baseurl:						"/classic";
+$baseurl:						""; // eg: "/classic" a leading '/' is important.
 
 // *********************************************************************************************************************
 // General color and background settings
