--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -23,7 +23,7 @@
 	{%- endif %}
 		<div class="title">
 			<label class="symbol"><p></p></label>
-			<div class="text"><a href="{{ site.url }}{{ site.baseurl }}"><p>{{ home }}</p></a></div>
+			<div class="text"><a href="{{ site.url }}{{ site.baseurl }}/index.html"><p>{{ home }}</p></a></div>
 		</div>
 	</div>
 	
