--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -196,8 +196,23 @@
 				{%- else %}
 		<div class="dropdown-narrow">
 				{%- endif -%}
+				
+				{%- assign processedSubMenuTitles = "" | split: "" -%}
+
 				{%- for subMenuTitle in sortedSubMenuTitles %}
-						
+
+					{%- comment -%}<!-- Do not build the same sub menu item twice -->{%- endcomment -%}
+
+					{%- assign subMenuTitleProcessed = false -%}
+					{%- for smt in processedSubMenuTitles -%}
+						{%- if smt == subMenuTitle -%}{% assign subMenuTitleProcessed = true -%}{%- endif -%}
+					{%- endfor -%}
+					{%- if subMenuTitleProcessed -%}
+						{%- continue -%}
+					{%- else -%}
+						{%- assign processedSubMenuTitles = processedSubMenuTitles | push: subMenuTitle -%}
+					{%- endif -%}
+
 					{%- comment -%}<!-- Build the sub-sub tables for {{ subMenuTitle }} -->{%- endcomment -%}
 						
 					{% assign subsubMenuTitles = "" | split: "" -%}
