--- a/_includes/vertical-menu.html
+++ b/_includes/vertical-menu.html
@@ -116,9 +116,22 @@
 	{%- endfor -%}
 
 
+	{%- assign processedSubMenuTitles = "" | split: "" -%}
 
 	{%- for subMenuTitle in sortedSubMenuTitles -%}
-	
+
+		{%- comment -%}<!-- Do not build the same sub menu item twice -->{%- endcomment -%}
+
+		{%- assign subMenuTitleProcessed = false -%}
+		{%- for smt in processedSubMenuTitles -%}
+			{%- if smt == subMenuTitle -%}{% assign subMenuTitleProcessed = true -%}{%- endif -%}
+		{%- endfor -%}
+		{%- if subMenuTitleProcessed -%}
+			{%- continue -%}
+		{%- else -%}
+			{%- assign processedSubMenuTitles = processedSubMenuTitles | push: subMenuTitle -%}
+		{%- endif -%}
+
 		{%- comment -%}<!-- Repeat the above, for the submenu title, building the subsub menu -->{%- endcomment -%}
 
 		{%- assign subsubMenuTitles = "" | split: "" -%}
