--- a/_includes/vertical-menu.html
+++ b/_includes/vertical-menu.html
@@ -224,7 +224,11 @@
 			<div class="sub-isActivePage">
 				<div class="disclosure"><p></p></div>
 				<div class="title">
+					{%- if sortedSubMenuUrls[forloop.index0] contains "http" -%}
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+					{%- else -%}
 					<a href="{{ sortedSubMenuUrls[forloop.index0] | relative_url }}"><p>{{ subMenuTitle }}</p></a>
+					{%- endif -%}
 				</div>
 			</div>
 				{%- else %}
@@ -236,14 +240,22 @@
 			<div class="sub-isActivePage">
 				<div class="disclosure"><p></p></div>
 				<div class="title">
+						{%- if sortedSubMenuUrls[forloop.index0] contains "http" -%}
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+						{%- else -%}
 					<a href="{{ sortedSubMenuUrls[forloop.index0] | relative_url }}"><p>{{ subMenuTitle }}</p></a>
+						{%- endif -%}
 				</div>
 			</div>
 					{%- else %}
 			<div class="sub-hasLink">
 				<div class="disclosure"><p></p></div>
 				<div class="title">
+						{%- if sortedSubMenuUrls[forloop.index0] contains "http" -%}
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+						{%- else -%}
 					<a href="{{ sortedSubMenuUrls[forloop.index0] | relative_url }}"><p>{{ subMenuTitle }}</p></a>
+						{%- endif -%}
 				</div>
 			</div>
 					{%- endif -%}
@@ -263,7 +275,11 @@
 					<p class="symbol"><!-- will be filled by disclosure indicator --></p>
 				</label>
 				<div class="title">
+					{%- if sortedSubMenuUrls[forloop.index0] contains "http" -%}
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+					{%- else -%}
 					<a href="{{ sortedSubMenuUrls[forloop.index0] | relative_url }}"><p>{{ subMenuTitle }}</p></a>
+					{%- endif -%}
 				</div>
 			</div>
 				{%- else %}
@@ -278,7 +294,11 @@
 					<p class="symbol"><!-- will be filled by disclosure indicator --></p>
 				</label>
 				<div class="title">
+						{%- if sortedSubMenuUrls[forloop.index0] contains "http" -%}
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+						{%- else -%}
 					<a href="{{ sortedSubMenuUrls[forloop.index0] | relative_url }}"><p>{{ subMenuTitle }}</p></a>
+						{%- endif -%}
 				</div>
 			</div>
 					{%- else %}
@@ -288,7 +308,11 @@
 					<p class="symbol"><!-- will be filled by disclosure indicator --></p>
 				</label>
 				<div class="title">
+						{%- if sortedSubMenuUrls[forloop.index0] contains "http" -%}
+					<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
+						{%- else -%}
 					<a href="{{ sortedSubMenuUrls[forloop.index0] | relative_url }}"><p>{{ subMenuTitle }}</p></a>
+						{%- endif -%}
 				</div>
 			</div>
 					{%- endif -%}
@@ -311,14 +335,22 @@
 			<div class="subsub-isActivePage">
 				<div class="disclosure"><p></p></div>
 				<div class="title">
+						{%- if sortedSubsubMenuUrls[forloop.index0] contains "http" -%}
+					<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubTitle }}</p></a>
+						{%- else -%}
 					<a href="{{ sortedSubsubMenuUrls[forloop.index0] | relative_url }}"><p>{{ subsubTitle }}</p></a>
+						{%- endif -%}
 				</div>
     		</div>
 					{%- else %}
 			<div class="subsub-hasLink">
 				<div class="disclosure"><p></p></div>
 				<div class="title">
+						{%- if sortedSubsubMenuUrls[forloop.index0] contains "http" -%}
+					<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubTitle }}</p></a>
+						{%- else -%}
 					<a href="{{ sortedSubsubMenuUrls[forloop.index0] | relative_url }}"><p>{{ subsubTitle }}</p></a>
+						{%- endif -%}
 				</div>
     		</div>
 					{% endif -%}
